@@ -27,9 +27,9 @@ import org.jmol.adapter.smarter.AtomSetCollectionReader;
 import org.jmol.adapter.smarter.Atom;
 import org.jmol.util.ArrayUtil;
 
-import java.util.ArrayList;
+import org.jmol.util.JmolList;
 import java.util.Hashtable;
-import java.util.List;
+
 import java.util.Map;
 
 
@@ -149,8 +149,8 @@ public class MopacGraphfReader extends MopacSlaterReader {
   private float[][] invMatrix;
   
   private boolean isNewFormat;
-  private List<float[]> orbitalData;
-  private List<String> orbitalInfo;
+  private JmolList<float[]> orbitalData;
+  private JmolList<String> orbitalInfo;
   
   private void readMolecularOrbitals(boolean isBeta) throws Exception {
     
@@ -165,9 +165,9 @@ public class MopacGraphfReader extends MopacSlaterReader {
       return;
     isNewFormat = (line.indexOf("ORBITAL") >= 0);
     if (isNewFormat) {
-      orbitalData = new ArrayList<float[]>();
+      orbitalData = new  JmolList<float[]>();
       if (line.length() > 10)
-        orbitalInfo = new ArrayList<String>();
+        orbitalInfo = new  JmolList<String>();
     } else {
       list = new float[nCoefficients][nCoefficients];
     }
@@ -178,9 +178,9 @@ public class MopacGraphfReader extends MopacSlaterReader {
       if (isNewFormat) {
         if (line == null || line.indexOf("ORBITAL") < 0 || line.indexOf("ORBITAL_LIST") >= 0)
           break;
-        orbitalData.add(data = new float[nCoefficients]);
+        orbitalData.addLast(data = new float[nCoefficients]);
         if (orbitalInfo != null)
-          orbitalInfo.add(line);
+          orbitalInfo.addLast(line);
         readLine();
       } else {
         data = list[iMo];
@@ -228,12 +228,12 @@ public class MopacGraphfReader extends MopacSlaterReader {
       if (orbitalInfo != null) {
         line = orbitalInfo.get(iMo);
         String[] tokens = getTokens();
-        mo.put("energy", new Float(parseFloatStr(tokens[3])));
-        mo.put("occupancy", new Float(parseFloatStr(tokens[1])));
+        mo.put("energy", Float.valueOf(parseFloatStr(tokens[3])));
+        mo.put("occupancy", Float.valueOf(parseFloatStr(tokens[1])));
       } else if (readLine() != null) {
         getTokensFloat(line, values, 2);
-        mo.put("energy", new Float(values[0]));
-        mo.put("occupancy", new Float(values[1]));
+        mo.put("energy", Float.valueOf(values[0]));
+        mo.put("occupancy", Float.valueOf(values[1]));
       }
       mo.put("coefficients", list2[iMo]);
       if (isBeta)
